Added content on home page,a navigation bar for userprofile.css and other future pages without actual href, implemented back button.

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,7 +3,14 @@
     text-align: center;
     justify-content: center;
 }
-
+#title{
+    text-align: center;
+    justify-content: center;
+}
+#function{
+    text-align: center;
+    justify-content: center;
+}
 #back {
     border: none;
     color: white;
