--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,12 +9,16 @@
 </head>
 <body>
 	<div class="container">
-		<h1 id="username">{{username}}</h1>	
+		<h3 id="username">{{username}}</h1>	
+		<h1 id="title">Home</h1>
+		<h2 id="function"><a href="Profile">Profile</a></h2>
+		<h2 id="function"><a href='friends'>Friends</a></h2>
+		<h2 id="function"><a href="discover">Discover</a></h2>
 	</div>
 
 
-	<script src="/routes/jquery-1.11.0.js"></script>	
-	<script src="/routes/boostrap.js"></script>
-	<script src="/routes/boostrap.min.js"></script>
+	<script src="/js/jquery-1.11.0.js"></script>	
+	<script src="/js/bootstrap.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
