--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -15,20 +15,44 @@
 		<img src="{{picture}}" id="profilepic">
 		<ul class="genres">
 			<li><a><h5>Favorite Genres</h5></a></li>
+			<hr>
 			<li><ul>
-				<li><a href=#home>Genre 1</a></li>
-				<li><a href=#home>Genre 2</a></li>
-				<li><a href=#home>Genre 3</a></li>
+				<li><a>Genre 1</a></li>
+				<li><a>Genre 2</a></li>
+				<li><a>Genre 3</a></li>
 			</ul></li>
+			<hr>
 			<li><ul>
 				<li><a class="linked"><h7>Linked Accounts</h7></a></li>
-				<li><a><h7>Spotify</h7></a></li>
-				<li><a><h7>Apple Music</h7></a></li>
-				<li><a><h7>Pandora</h7></a></li>
-				<li><a><h7>Soundcloud</h7></a></li>
+				<li><a>Spotify</a></li>
+				<li><a>Apple Music</a></li>
+				<li><a>Pandora</a></li>
+				<li><a>Soundcloud</a></li>
 				<li><button type="button" id="addsource">Add</button></li>
 			</ul></li>
 		</ul>
+		<hr>
+		<h3>Statistics</h3>
+		<ul class="stats">
+			<li><h7>Stats 1</h7></li>
+			<li><h7>Stats 2</h7></li>
+			<li><h7>Stats 3</h7></li>
+		</ul>
+		<hr>
+		<h3>Favorites</h3>
+		<ul class="playlists">
+			<ul>
+				<li><a>Playlist 4</a></li>
+				<li><a>Playlist 5</a></li>
+				<li><a>Playlist 6</a></li>
+			</ul>
+			<ul>
+				<li><a>Playlist 4</a></li>
+				<li><a>Playlist 5</a></li>
+				<li><a>Playlist 6</a></li>
+			</ul>
+		</ul>
+		<hr>
 		<ul class="navbar">
 			<li><a href=#home>Home</a></li>
 			<li><a href=#home class="active">Account</a></li>
