--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,21 +3,43 @@
     text-align: center;
     justify-content: center;
 }
-#title{
+
+#title {
     text-align: center;
-    justify-content: center;
 }
-#function{
-    text-align: center;
-    justify-content: center;
+.function {
+    text-align:center;
 }
-#back {
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
+
+/* Place the navbar at the bottom of the page, and make it stick */
+.navbar{
+    border:1px solid #ccc;
+    border-width:1px 0;
+    list-style:none;
+    margin:0;
+    padding:0;
+    text-align:center;
+    bottom: 0;
+}
+.navbar li{
+    display:inline;
+}
+.navbar a{
+    display:inline-block;
+    padding:10px;
+    padding: 14px 16px;
     text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+    color:#000000;
+}
+
+/* Change the color of links on hover */
+.navbar a:hover {
+  background-color: #ddd;
+}
+
+/* Add a color to the active/current link */
+.navbar a.active {
+  background-color: #000000;
+  color: white;
 }
 
