--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,9 +11,15 @@
 	<div class="container">
 		<h3 id="username">{{username}}</h1>	
 		<h1 id="title">Home</h1>
-		<h2 id="function"><a href="Profile">Profile</a></h2>
-		<h2 id="function"><a href='friends'>Friends</a></h2>
-		<h2 id="function"><a href="discover">Discover</a></h2>
+		<h2 class="function"><a href="Profile">Profile</a></h2><hr>
+		<h2 class="function"><a href='Friends'>Friends</a></h2><hr>
+		<h2 class="function"><a href="Discover">Discover</a></h2>
+		<ul class="navbar">
+			<li><a href=#home>Home</a></li>
+			<li><a href=#home class="active">Account</a></li>
+			<li><a href=#home>Friends</a></li>
+			<li><a href=#home>Discover</a></li>
+		</ul>
 	</div>
 
 
