Friends and Discover page
Got buttons to work

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,9 +11,9 @@
 	<div class="container">
 		<h3 id="username">{{username}}</h1>	
 		<h1 id="title">Home</h1>
-		<h2 class="function"><a href="Profile">Profile</a></h2><hr>
-		<h2 class="function"><a href='Friends'>Friends</a></h2><hr>
-		<h2 class="function"><a href="Discover">Discover</a></h2>
+		<h2 class="function"><a href="{{username}}">Profile</a></h2><hr>
+		<h2 class="function"><a href='{{username}}/Friends'>Friends</a></h2><hr>
+		<h2 class="function"><a href="{{username}}/Discover">Discover</a></h2>
 		<ul class="navbar">
 			<li><a href=#home>Home</a></li>
 			<li><a href=#home class="active">Account</a></li>
