--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -11,6 +11,12 @@
 	<div class="container">
 		<button type="button" onclick="goBack()" id="back">Back</button> 
 		<h1 id="friends">Discover</h1><hr>
+		<ul class="navbar">
+			<li><a href="/">Home</a></li>
+			<li><a href="{{username}}" class="active">Account</a></li>
+			<li><a href='{{username}}/Friends'>Friends</a></li>
+			<li><a href="{{username}}/Discover">Discover</a></li>
+		</ul>
 	</div>
 
 	<script src="/js/jquery-1.11.0.js"></script>	
