--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,10 +15,10 @@
 		<h2 class="function"><a href='{{username}}/Friends'>Friends</a></h2><hr>
 		<h2 class="function"><a href="{{username}}/Discover">Discover</a></h2>
 		<ul class="navbar">
-			<li><a href=#home>Home</a></li>
-			<li><a href=#home class="active">Account</a></li>
-			<li><a href=#home>Friends</a></li>
-			<li><a href=#home>Discover</a></li>
+			<li><a href=#>Home</a></li>
+			<li><a href="{{username}}" class="active">Account</a></li>
+			<li><a href='{{username}}/Friends'>Friends</a></li>
+			<li><a href="{{username}}/Discover">Discover</a></li>
 		</ul>
 	</div>
 
