--- a/views/friends.handlebars
+++ b/views/friends.handlebars
@@ -16,7 +16,13 @@
 			<img src="{{picture}}" class="img-responsive img-rounded">
 			<a href="#"><h3>{{username}}</h3></a>
 			<hr>
-		{{/each}}	
+		{{/each}}
+		<ul class="navbar">
+			<li><a href="/">Home</a></li>
+			<li><a href="{{username}}" class="active">Account</a></li>
+			<li><a href='{{username}}/Friends'>Friends</a></li>
+			<li><a href="{{username}}/Discover">Discover</a></li>
+		</ul>	
 	</div>
 
 	<script src="/js/jquery-1.11.0.js"></script>	
