--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -54,10 +54,10 @@
 		</ul>
 		<hr>
 		<ul class="navbar">
-			<li><a href=#home>Home</a></li>
-			<li><a href=#home class="active">Account</a></li>
-			<li><a href=#home>Friends</a></li>
-			<li><a href=#home>Discover</a></li>
+			<li><a href="/">Home</a></li>
+			<li><a href="{{username}}" class="active">Account</a></li>
+			<li><a href='{{username}}/Friends'>Friends</a></li>
+			<li><a href="{{username}}/Discover">Discover</a></li>
 		</ul>
 	</div>
 
