--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -2,19 +2,8 @@
     color: rgb(19, 17, 141);
     padding: 5px 100px;
     text-align: center;
-    justify-content: center;
+    justify-content: left;
     display: inline-block;
-}
-
-#back {
-    border: gray;
-    background-color: #e7e7e7; 
-    color: black; 
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
 }
 
 #changepic {
@@ -37,38 +26,6 @@
     border-width: 1px;
     list-style:none;
     text-align:left;
-}
-
-/* Place the navbar at the bottom of the page, and make it stick */
-.navbar{
-    border:1px solid #ccc;
-    border-width:1px 0;
-    list-style:none;
-    margin:0;
-    padding:0;
-    text-align:center;
-    bottom: 0;
-}
-.navbar li{
-    display:inline;
-}
-.navbar a{
-    display:inline-block;
-    padding:10px;
-    padding: 14px 16px;
-    text-decoration: none;
-    color:#000000;
-}
-
-/* Change the color of links on hover */
-.navbar a:hover {
-  background-color: #ddd;
-}
-
-/* Add a color to the active/current link */
-.navbar a.active {
-  background-color: #000000;
-  color: white;
 }
 
 .profilepic {
