--- a/views/friends.handlebars
+++ b/views/friends.handlebars
@@ -3,31 +3,38 @@
 	<title>Team1 J. Smith Homepage</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Linked css files -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="/css/friends.css" rel="stylesheet">
+	<link href="/css/constants.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
+		<!-- Friends page -->
 		<button type="button" onclick="goBack()" id="back">Back</button> 
 		<h1 id="friends">Friends</h1>	
 		<hr>
+		<!-- Friends List -->
 		{{#each friends}}
 			<img src="{{picture}}" class="img-responsive img-rounded">
 			<a href="#"><h3>{{username}}</h3></a>
 			<hr>
 		{{/each}}
+		<!-- Navbar section -->
 		<ul class="navbar">
 			<li><a href="/">Home</a></li>
-			<li><a href="{{username}}" class="active">Account</a></li>
-			<li><a href='{{username}}/Friends'>Friends</a></li>
-			<li><a href="{{username}}/Discover">Discover</a></li>
+			<li><a href="/{{username}}">Account</a></li>
+			<li><a href='/{{username}}/Friends' class="active">Friends</a></li>
+			<li><a href="/{{username}}/Discover">Discover</a></li>
 		</ul>	
 	</div>
 
+	<!-- connected javascript files -->
 	<script src="/js/jquery-1.11.0.js"></script>	
 	<script src="/js/bootstrap.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/friends.js"></script>
 	<script>
 		function goBack(){
 			window.history.back();
