--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,28 +3,32 @@
 	<title>Team 1</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Linked css files --> 
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="/css/home.css" rel="stylesheet">
+	<link href="/css/constants.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
-		<h3 id="username">{{username}}</h1>	
+		<!-- Home page buttons -->
 		<h1 id="title">Home</h1>
 		<h2 class="function"><a href="{{username}}">Profile</a></h2><hr>
 		<h2 class="function"><a href='{{username}}/Friends'>Friends</a></h2><hr>
-		<h2 class="function"><a href="{{username}}/Discover">Discover</a></h2>
+		<h2 class="function"><a href="{{username}}/Discover">Discover</a></h2><hr>
+		<!-- Navbar section -->
 		<ul class="navbar">
-			<li><a href=#>Home</a></li>
-			<li><a href="{{username}}" class="active">Account</a></li>
-			<li><a href='{{username}}/Friends'>Friends</a></li>
-			<li><a href="{{username}}/Discover">Discover</a></li>
-		</ul>
+			<li><a href="/" class="active">Home</a></li>
+			<li><a href="/{{username}}">Account</a></li>
+			<li><a href='/{{username}}/Friends'>Friends</a></li>
+			<li><a href="/{{username}}/Discover">Discover</a></li>
+		</ul>	
 	</div>
 
-
+	<!-- connected javascript files -->
 	<script src="/js/jquery-1.11.0.js"></script>	
 	<script src="/js/bootstrap.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
+	<script src="index.js"></script>
 </body>
 </html>
