--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -1,11 +1,52 @@
-#username {
-    color: rgb(19, 17, 141);
-    padding: 5px 100px;
+/* Back Button and Username display */
+.backandname h1 {
     text-align: center;
-    justify-content: left;
+    justify-content: center;
     display: inline-block;
+    padding-left: 20px;
 }
 
+/* Profile Picture and Statistics and Favorites Section */
+.picandlinks {
+    position: relative;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 425px;
+    height: 150px;
+    align: center;
+}
+
+.picandlinks a img {
+    float: left;
+    max-width: 50%;
+    max-height: 100%;
+}
+
+.picandlinks h4 {
+    display: inline-block;
+    padding-left: 10px;
+    text-align: left;
+    max-width: 100%;
+    max-height: 50%;
+}
+
+.stats {
+    display: inline-table;
+    padding: 2px;
+    border: 1px solid rgb(10, 10, 10);
+    border-width: 2px;
+    list-style:none;
+    text-align:center;
+}
+
+.stats li {
+    display: inline;
+    border-bottom: 1px solid rgb(10, 10, 10);
+    border-width: 2px;
+    border-bottom: 20px;
+}
+
+/* Change Profile Picture Button */
 #changepic {
     display: none;
 }
@@ -17,19 +58,6 @@
 
 #changepic:target {
     display: inline-block;
-}
-
-#playlistops:target {
-    display: inline-block;
-    padding: 2px 2px;
-    border: 1px solid rgb(10, 10, 10);
-    border-width: 1px;
-    list-style:none;
-    text-align:left;
-}
-
-.profilepic {
-    padding: 2px;
 }
 
 .genres {
@@ -51,22 +79,6 @@
 .genres .linked {
     text-align: left;
     font: bold;
-}
-
-.stats {
-    display: inline-table;
-    padding: 2px;
-    border: 1px solid rgb(10, 10, 10);
-    border-width: 2px;
-    list-style:none;
-    text-align:center;
-}
-
-.stats li {
-    display: inline;
-    border-bottom: 1px solid rgb(10, 10, 10);
-    border-width: 2px;
-    border-bottom: 20px;
 }
 
 .playlists {
