--- a/public/css/constants.css
+++ b/public/css/constants.css
@@ -18,8 +18,8 @@
     text-align: center;
     bottom: 0;
     position: absolute;
-    margin-left: auto;
-    margin-right: auto;
+    margin:0;
+    padding:0;
     left: 0;
     right: 0;
 }
