--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -9,25 +9,47 @@
 /* Profile Picture and Statistics and Favorites Section */
 .picandlinks {
     position: relative;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    width: 425px;
-    height: 150px;
-    align: center;
+    overflow:hidden;
+    padding: 0px;
+    margin:5px;
+    width: 100%;
+    height: 15%;
 }
-
-.picandlinks a img {
+.pic-spacer{
+    width:100%;
+    height:15%;
+    max-height:20px;
+}
+.pic-container{
+    width:25%;
+    height:100%;
+    margin: 0 auto;
+    padding: 0px;
     float: left;
-    max-width: 50%;
+    text-align: center;
+}
+.sub{
+    width:75%;
+    height:100%;
+    margin: 0 auto;
+    padding:0px;
+    float: left;
+    text-align: center;
+    vertical-align:middle;
+}
+/*image size and margin*/
+.picandlinks a{
+
+}
+.picandlinks a img {
+    vertical-align:middle;
+    margin-top:0px;
+    max-width: 100%;
     max-height: 100%;
 }
 
 .picandlinks h4 {
     display: inline-block;
-    padding-left: 10px;
-    text-align: left;
-    max-width: 100%;
-    max-height: 50%;
 }
 
 .stats {
