--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -19,10 +19,15 @@
 		</div>	
 		<div class="picandlinks">
 			<!-- Profile Picture -->
-			<a href="#changepic"><img src="{{picture}}"></a>
-			<!-- Links to Stats and Favorites user pages -->
-			<h4><a href="/{{username}}/statistics">Statistics</a></h4><hr>
-			<h4><a href="/{{username}}/favorites">Playlists</a></h4>
+			<div class="pic-container">
+				<div class="pic-spacer"></div>
+				<a href="#changepic"><img src="{{picture}}"></a>
+			</div>
+			<div class="sub">
+				<!-- Links to Stats and Favorites user pages -->
+				<h4><a href="/{{username}}/statistics">Statistics</a></h4><hr>
+				<h4><a href="/{{username}}/favorites">Playlists</a></h4>
+			</div>
 		</div>
 		<hr>
 		<div id="changepic"> <!-- TODO change to js event handler -->
@@ -34,9 +39,9 @@
 			<hr>
 			<!-- Top 3 Genres -->
 			<li><ul>
-				<li><a>Genre 1</a></li>
-				<li><a>Genre 2</a></li>
-				<li><a>Genre 3</a></li>
+				<li><a>Hip-Pop, </a></li>
+				<li><a>Indie, </a></li>
+				<li><a>Rock</a></li>
 			</ul></li>
 			<hr>
 			<!-- Linked Music Accounts, Add Button -->
