--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Team1 J. Smith Homepage</title>
+	<title>J. Smith Discover</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
