--- a/views/friends.handlebars
+++ b/views/friends.handlebars
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Team1 J. Smith Homepage</title>
+	<title>J. Smith Friends</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Linked css files -->
