--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -13,11 +13,11 @@
     padding: 0px;
     margin:5px;
     width: 100%;
-    height: 15%;
+    height: 200px;
 }
 .pic-spacer{
     width:100%;
-    height:15%;
+    height:10%;
     max-height:20px;
 }
 .pic-container{
@@ -38,18 +38,27 @@
     vertical-align:middle;
 }
 /*image size and margin*/
-.picandlinks a{
-
+.picandlinks {
+    position: relative;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 425px;
+    height: 150px;
+    align: center;
 }
+
 .picandlinks a img {
-    vertical-align:middle;
-    margin-top:0px;
-    max-width: 100%;
+    float: left;
+    max-width: 50%;
     max-height: 100%;
 }
 
 .picandlinks h4 {
     display: inline-block;
+    padding-left: 10px;
+    text-align: left;
+    max-width: 100%;
+    max-height: 50%;
 }
 
 .stats {
