--- a/views/discover.handlebars
+++ b/views/discover.handlebars
@@ -15,7 +15,7 @@
 		<h1 id="friends">Discover</h1><hr>
 		<!-- Navbar section -->
 		<ul class="navbar">
-			<li><a href="/">Home</a></li>
+			<li><a href="/{{username}}/index">Home</a></li>
 			<li><a href="/{{username}}">Account</a></li>
 			<li><a href='/{{username}}/Friends'>Friends</a></li>
 			<li><a href="/{{username}}/Discover" class="active">Discover</a></li>
