--- a/views/friends.handlebars
+++ b/views/friends.handlebars
@@ -23,7 +23,7 @@
 		{{/each}}
 		<!-- Navbar section -->
 		<ul class="navbar">
-			<li><a href="/">Home</a></li>
+			<li><a href="/{{username}}/index">Home</a></li>
 			<li><a href="/{{username}}">Account</a></li>
 			<li><a href='/{{username}}/Friends' class="active">Friends</a></li>
 			<li><a href="/{{username}}/Discover">Discover</a></li>
