--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,7 +23,7 @@
 
 		<!-- Navbar section -->
 		<ul class="navbar">
-			<li><a href="/" class="active">Home</a></li>
+			<li><a href="/{{username}}/index" class="active">Home</a></li>
 			<li><a href="/{{username}}">Account</a></li>
 			<li><a href='/{{username}}/Friends'>Friends</a></li>
 			<li><a href="/{{username}}/Discover">Discover</a></li>
