--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -7,7 +7,7 @@
 }
 
 /* Spacer between top of page and profile picture */
-.pic-spacer{
+.spacer{
     width:100%;
     height:10%;
     max-height:20px;
@@ -67,27 +67,40 @@
     display: inline-block;
 }
 
+/* At a glance section */
 .glance {
     display: inline-table;
     padding: 5px;
-    border: 1px solid rgb(10, 10, 10);
     border-width: 2px;
     list-style: none;
     text-align: center;
+    width: 100%;
+    height: 40%;
 }
 
 .glance li {
-    display: inline;
+    float: left;
+    text-align: center;
     border-width: 5px;
     border-bottom: 1px;
-}   
+}  
 
-.glance .linked {
-    text-align: left;
-    font: bold;
+.genre {
+    display: inline;
+    text-align: center;
+}
+
+#addsource {
+    display: inline-block;
+    text-align: center;
+    border: gray;
+    color: black; 
+    background-color: #e7e7e7; 
+    font-size: 14px;
+    float: right;
 }
 
 .topgenres a {
-    text-align: center;
+    text-align: left;
     padding-block-end: 5px;
 }
