--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,6 +4,10 @@
     justify-content: center;
 }
 
+.container{
+    height:100%;
+    background-color: #F3FFFF;
+}
 .title {
     text-align: center;
     height:5%;
