--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -31,8 +31,8 @@
 			</div>
 		</div>
 		<!-- At a Glance Table -->
-		<div>
-			<ul class="glance">
+		<div class="glance">
+			<ul>
 				<li><h3>At a Glance</h3></li>
 				<div class="spacer"></div>
 				<!-- Top 3 Genres -->
@@ -65,8 +65,8 @@
 						{{/if}}
 					{{/each}}
 				</ul></li>
-				<li><button type="button" id="addsource">Add Source</button></li>
 			</ul>
+			<button type="button" id="addsource">Add Source</button></li>
 		</div>
 		<!-- Navbar Section -->
 		<ul class="navbar">
