--- a/public/css/favorites.css
+++ b/public/css/favorites.css
@@ -1,3 +1,10 @@
+h2{
+    color:#ff0000;
+}
+
+.backandname p{
+    color:#3CB371;
+}
 .playlists {
     display: inline-table;
     padding: 2px 2px;
@@ -5,6 +12,29 @@
     border-width: 2px;
     list-style:none;
     text-align:center;
+}
+
+.row{
+    position: relative;
+    overflow: hidden;
+    padding: 10px;
+    margin: 5px;
+    width: 100%;
+    height:29%
+}
+.thumbnail{
+    display:inline-block;
+    float:left;
+    width:45%;
+    text-align:center;
+    height:28%;
+    margin:2%;
+    vertical-align:top;
+}
+
+.thumbnail span{
+    position:absolute;
+    bottom:0;
 }
 
 .playlists li {
