--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -24,17 +24,13 @@
 		<div class="Playlist" id="1">
 			<div class="thumbnail">
 				<img src="https://pl.scdn.co/images/pl/default/e3319943c4af9e1e3b0ec9ce4ef4457a1f788c23">
-				<span>
 					<a href="https://open.spotify.com/playlist/3FJd21jWvCjGCLx7eKrext"><p>Video Game Masterpiece</p></a>
-				</span>
 			</div>
 		</div>
 				<div class="Playlist" id="2">
 			<div class="thumbnail">
 				<img src="https://i.scdn.co/image/2976d930b671fdf183cf2c4fe253faa2c5329599">
-				<span>
 				<a href="https://open.spotify.com/album/04uEX0wzsnA5UcaEtxcbal"><p>Distant Worlds</p></a>
-			</span>
 			</div>
 		</div>
 	</div>
@@ -62,7 +58,7 @@
 				<div class="Playlist" id="6">
 			<div class="thumbnail">
 				<img src="https://mosaic.scdn.co/640/03e6e600fb3b9c4c6ef0df6b0d287d0e7d18d7992a02f49aeb969a346525a5c410bff89eaa2579db499a51b4338de0bbd9a65dc85e50f1c67bc18bbe4e8b9a2b12a8b30e135890bbf3be5979b227ed10">
-				<a href="https://open.spotify.com/search/results/Barney's%20Get%20Psyched%20Mix"><p>Barney's Get Psyched Mix</p></a>
+				<a href="https://open.spotify.com/playlist/2iKv43i7Ev28uetnfHX52p"><p>Barney's Get Psyched Mix</p></a>
 			</div>
 		</div>
 	</div>
