changed discover to logout

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,7 @@
 		<div class="spacer2"></div>
 		<div class="function"><hr><h2><a href='/{{username}}/Friends'>Friends</a></h2><hr></div>
 		<div class="spacer2"></div>
-		<div class="function"><hr><h2><a href="/{{username}}/Discover">Discover</a></h2><hr></div>
+		<div class="function"><hr><h2><a href="/">Log Out</a></h2><hr></div>
 		<div class="spacer"></div>
 
 		<!-- Navbar section -->
