improved description consistency

--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -27,7 +27,7 @@
 			<div class="sub">
 				<!-- Links to Stats and Favorites user pages. Need to add link to Stats page and fill those pages -->
 				<h3><a href="/{{username}}/statistics">Statistics </a><span class="glyphicon glyphicon-stats"></span></h3><hr>
-				<h3><a href="/{{username}}/favorites">Playlists</a></h3>
+				<h3><a href="/{{username}}/favorites">Favorites</a></h3>
 			</div>
 		</div>
 		<!-- At a Glance Table -->
