--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
 		<!-- Home page buttons -->
 		<div class="title"><h1>Home</h1></div>
 		<div class="spacer"></div>
-		<div class="function"><h2><hr><a href="/{{username}}">Profile</a></h2><hr></div>
+		<div class="function"><h2><hr><a href="/{{username}}">Account</a></h2><hr></div>
 		<div class="spacer2"></div>
 		<div class="function"><hr><h2><a href='/{{username}}/Friends'>Friends</a></h2><hr></div>
 		<div class="spacer2"></div>
