Added Statistics and Friends Page. Made add source button "work"

--- a/public/css/friends.css
+++ b/public/css/friends.css
@@ -3,3 +3,12 @@
     text-align: center;
     justify-content: center;
 }
+
+.friendslist {
+    height: 60%;
+
+}
+
+.friendslist img {
+    height: 15%;
+}
