--- a/public/css/userprofile.css
+++ b/public/css/userprofile.css
@@ -78,7 +78,7 @@
     border-width: 2px;
     list-style: none;
     text-align: center;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .glance li {
@@ -105,4 +105,14 @@
 .topgenres a {
     text-align: left;
     padding-block-end: 5px;
+}
+
+.sourceops {
+    display: none;
+    text-align: right;
+    font-size: 14px;
+}
+
+.sourceops select {
+    padding-bottom: 5px;
 }
