removed and edited some links

--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -39,7 +39,7 @@
 					<li>Top 3 Genres:</li>
 					{{#with statistics}}
 						{{#each genres}}
-							<li class="genre"><a>{{genre}}</a></li>
+							<li class="genre">{{genre}}</li>
 						{{/each}}
 					{{/with}}
 				</ul></li>
