--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -62,6 +62,15 @@
 			</div>
 		</div>
 	</div>
+				<!-- Navbar Section -->
+		<div id="nav-spacer"></div>
+		<ul class="navbar">
+			<li><a href="/{{username}}">Account</a></li>
+			<li><a href='/{{username}}/Friends'>Friends</a></li>
+			<li><a href="/{{username}}/Statistics">Statistics</a></li>
+			<li><a href='/{{username}}/Favorites' class="active">Favorites</a></li>
+		</ul>
+	</div>
 
 	<!-- connected javascript files -->
 	<script src="/js/jquery-1.11.0.js"></script>	
