--- a/views/friends.handlebars
+++ b/views/friends.handlebars
@@ -23,12 +23,14 @@
 			<hr>
 		{{/each}}
 		</div>
-		<!-- Navbar section -->
+		<!-- Navbar Section -->
 		<ul class="navbar">
-			<li><a href="/{{username}}/index">Home</a></li>
 			<li><a href="/{{username}}">Account</a></li>
 			<li><a href='/{{username}}/Friends' class="active">Friends</a></li>
-		</ul>	
+			<li><a href="/{{username}}/Statistics">Statistics</a></li>
+			<li><a href='/{{username}}/Favorites'>Favorites</a></li>
+		</ul>
+	</div>
 	</div>
 
 	<!-- connected javascript files -->
