--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -21,9 +21,9 @@
 			<div class="form-group">
 				<label for="password">Password:</label>
 				<br>
-				<input type="text" class="form-control" id="password" placeholder name="pswd">
+				<input type="password" class="form-control" id="password" placeholder name="pswd">
 			</div>
-			<form action="/{{username}}/index">
+			<form action="/{{username}}">
 				<input type="submit" value="Login">
 			</form>
 		</div>
