--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -76,11 +76,15 @@
                 </form>
 			</div>
 		</div>
+		<div class="logout">
+				<h3><a href='/'>Log out</a></h3>
+		</div>
 		<!-- Navbar Section -->
 		<ul class="navbar">
-			<li><a href="/{{username}}/index">Home</a></li>
 			<li><a href="/{{username}}" class="active">Account</a></li>
 			<li><a href='/{{username}}/Friends'>Friends</a></li>
+			<li><a href="/{{username}}/Statistics">Statistics</a></li>
+			<li><a href='/{{username}}/Favorites'>Favorites</a></li>
 		</ul>
 	</div>
 
