--- a/public/css/constants.css
+++ b/public/css/constants.css
@@ -1,3 +1,4 @@
+html { overflow-y: scroll; }
 /* Place the back button at the top left of page */
 #back {
     border: gray;
@@ -15,17 +16,25 @@
     min-height:100%;
     background-color: #F3FFFF;
     max-width:414px;
+    overflow:scroll;
 }
 /* Place the navbar at the bottom of the page, and make it stick */
+#nav-spacer{
+position:relative;
+height:50px;
+}
 .navbar{
     border:1px solid #ccc;
+    background-color:#ffffff;
+    overflow: hidden;
     border-width:1px 0;
     max-width:414px;
     list-style:none;
     text-align: center;
     bottom: 0;
-    position: absolute;
+    position: fixed;
     margin:0 auto;
+    margin-top:1%;
     padding:0;
     left: 0;
     right: 0;
